--- a/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
+++ b/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
@@ -10,3 +10,8 @@ bootstrap: |
   pip install -U fedml
   sh ./config/bootstrap.sh
   echo "Bootstrap finished"
+
+inference_image_name: "ccr-23gxup9u-pub.cnc.bj.baidubce.com/public/text2image"
+enable_custom_image: true
+use_gpu: true
+deploy_timeout: 1800
