update the workflow.

--- a/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
+++ b/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
@@ -11,7 +11,7 @@ bootstrap: |
   sh ./config/bootstrap.sh
   echo "Bootstrap finished"
 
-inference_image_name: "ccr-23gxup9u-pub.cnc.bj.baidubce.com/public/text2image:v1"
+inference_image_name: "ccr-23gxup9u-pub.cnc.bj.baidubce.com/public/mv2model:v1"
 enable_custom_image: true
 use_gpu: true
 deploy_timeout: 1800
