--- a/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
+++ b/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
@@ -8,7 +8,7 @@ server_internal_port: 10008
 bootstrap: |
   echo "Bootstrap start..."
   pip install -U fedml
-  sh ./config/bootstrap.sh
+  python3 /home/fedml/models_serving/main_entry.py
   echo "Bootstrap finished"
 
 inference_image_name: "ccr-23gxup9u-pub.cnc.bj.baidubce.com/public/mv2model:v1"
