--- a/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
+++ b/python/fedml/workflow/driver_example/test2image_job_example/text2image/fedml_model_config.yaml
@@ -8,7 +8,7 @@ server_internal_port: 10008
 bootstrap: |
   echo "Bootstrap start..."
   pip install pydantic>=2.0
-  pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple fedml==0.8.24a1
+  pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple fedml==0.8.90b2
   echo "Bootstrap finished"
 
 inference_image_name: "ccr-23gxup9u-pub.cnc.bj.baidubce.com/public/mv2model:v1"
