--- a/python/fedml/workflow/driver_example/customized_job_example/train_job.yaml
+++ b/python/fedml/workflow/driver_example/customized_job_example/train_job.yaml
@@ -22,7 +22,9 @@ job_type: train              # options: train, deploy, federate
 # Bootstrap shell commands which will be executed before running entry commands.
 # Support multiple lines, which can be empty.
 bootstrap: |
+  pip install PyYAML==5.3.1 -i https://pypi.org/simple
   pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple fedml==0.8.58
+  pip install -U typing_extensions -i https://pypi.org/simple
   echo "Bootstrap finished."
 
 computing:
