--- a/devops/dockerfile/server-agent/Dockerfile-Dev
+++ b/devops/dockerfile/server-agent/Dockerfile-Dev
@@ -15,6 +15,8 @@ RUN pip3 install -r ./fedml/requirements.txt
 COPY ./python ./fedml/fedml-pip
 WORKDIR ./fedml/fedml-pip
 RUN pip3 install -e ./
+RUN pip3 install -U pydantic
+RUN pip3 install -U fastapi
 #RUN pip3 install -e '.[tensorflow]'
 #RUN pip3 install -e '.[jax]'
 #RUN pip3 install -e '.[mxnet]'
