--- a/python/fedml/workflow/driver_example/customized_job_example/train_job.yaml
+++ b/python/fedml/workflow/driver_example/customized_job_example/train_job.yaml
@@ -23,7 +23,7 @@ job_type: train              # options: train, deploy, federate
 # Support multiple lines, which can be empty.
 bootstrap: |
   pip install PyYAML==5.3.1 -i https://pypi.org/simple
-  pip install fedml
+  pip install fedml==0.8.29
   pip install -U typing_extensions -i https://pypi.org/simple
   echo "Bootstrap finished."
 
