--- a/.github/workflows/smoke_test_cross_silo_fedavg_attack_linux.yml
+++ b/.github/workflows/smoke_test_cross_silo_fedavg_attack_linux.yml
@@ -58,7 +58,7 @@ jobs:
             echo "dir=$path" >> $GITHUB_OUTPUT
           else
             echo "running on dev"
-            path=/home/actions-runner/FedML
+            path=/home/fedml/FedML
             cd $path
             echo "dir=$path" >> $GITHUB_OUTPUT
           fi
