--- a/.github/workflows/smoke_test_pip_cli_sp_linux.yml
+++ b/.github/workflows/smoke_test_pip_cli_sp_linux.yml
@@ -59,8 +59,11 @@ jobs:
             echo "dir=$path" >> $GITHUB_OUTPUT
           else
             echo "running on dev"
-            path=/home/fedml/FedML
-            cd $path
+            root_path=/home/fedml
+            cd $root_path
+            git clone https://github.com/Qigemingziba/FedML.git
+            cd FedML
+            git checkout dev/v0.7.0
             echo "dir=$path" >> $GITHUB_OUTPUT
           fi
       - name: sync git repo to local pip
@@ -69,7 +72,7 @@ jobs:
           homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
           echo $Homepath
           cd $homepath
-          # bash ./devops/scripts/sync-fedml-pip.sh
+          bash ./devops/scripts/sync-fedml-pip.sh
 
       - name: test "fedml login" and "fedml build"
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
