--- a/.github/workflows/smoke_test_pip_cli_sp_linux.yml
+++ b/.github/workflows/smoke_test_pip_cli_sp_linux.yml
@@ -61,6 +61,11 @@ jobs:
             echo "running on dev"
             root_path=/home/fedml
             cd $root_path
+            # 检查目标目录是否存在
+            if [ -d "FedML" ]; then
+                echo "Directory 'FedML' already exists. Removing it."
+                rm -rf FedML
+            fi
             git clone -b dev/v0.7.0 --single-branch https://github.com/Qigemingziba/FedML.git
             cd FedML
             path=/home/fedml/FedML
