update mpi linux

--- a/.github/workflows/smoke_test_simulation_mpi_linux.yml
+++ b/.github/workflows/smoke_test_simulation_mpi_linux.yml
@@ -53,9 +53,9 @@ jobs:
     - name: Install MPI
       if: matrix.mpi == 'mpich'
       run: |
-          sudo apt-get update
-          sudo apt-get install -y mpich libmpich-dev
-          
+          apt-get update
+          apt-get install -y mpich libmpich-dev
+
     - id: fedml_source_code_home
       name: cd to master or dev branch and git pull
       shell: bash
