--- a/devops/dockerfile/github-action-runner/Dockerfile
+++ b/devops/dockerfile/github-action-runner/Dockerfile
@@ -2,7 +2,7 @@
 FROM fedml/fedml:latest-torch1.13.1-cuda11.6-cudnn8-devel
 
 # set the github runner version
-ARG RUNNER_VERSION="2.304.0"
+ARG RUNNER_VERSION="2.317.0"
 
 # update the base packages and add a non-sudo user
 #RUN apt-get update -y && apt-get upgrade -y && useradd -m docker
@@ -35,7 +35,8 @@ RUN pip install tensorflow && pip install tensorflow_datasets && pip install jax
 # set the user to "docker" so all subsequent commands are run as the docker user
 #USER docker
 
-ENV REPO=FedML-AI/FedML ACCESS_TOKEN=1
+RUN git clone https://github.com/Qigemingziba/FedML.git 
+ENV REPO=Qigemingziba/FedML ACCESS_TOKEN=AGMK3P4W5EM5PXNYTZXXIMTGNF4MW
 
 # set the entrypoint to the start.sh script
 CMD ./start.sh ${REPO} ${ACCESS_TOKEN}
