change actions build

--- a/.github/workflows/smoke_test_cross_device_mnn_server_linux.yml
+++ b/.github/workflows/smoke_test_cross_device_mnn_server_linux.yml
@@ -70,6 +70,8 @@ jobs:
           homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
           echo $Homepath
           cd $homepath
+          cd python
+          pip install -e ./
           # bash ./devops/scripts/sync-fedml-pip.sh
 
       - name: Install MNN
