--- a/python/examples/deploy/custom_inference_image/custom_inference_image.yaml
+++ b/python/examples/deploy/custom_inference_image/custom_inference_image.yaml
@@ -1,13 +1,14 @@
 workspace: "./"
-job: |
-  echo "Start serving..."
-  python3 serve_main.py
 
-bootstrap: |
-  echo "Bootstrap start..."
-  echo "Bootstrap finished!"
+inference_image_name: "ghcr.io/predibase/lorax:main"
+container_run_command: "--model-id mistralai/Mistral-7B-Instruct-v0.1"
 
-enable_custom_image: true
-inference_image_name: "fedml/fedml-default-inference-backend"
-deploy_timeout: 1000
+environment_variables:
+  HUGGING_FACE_HUB_TOKEN: ""
 
+readiness_probe:
+  path: "health"
+
+port: 80
+
+deploy_timeout: 1600
