--- a/.github/workflows/CI_serving.yml
+++ b/.github/workflows/CI_serving.yml
@@ -67,11 +67,10 @@ jobs:
           cd $homepath
           cd python
           pip install -e ./
-          # bash ./devops/scripts/sync-fedml-pip.sh
 
       - name: serving_job_in_test_env
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          python tests/test_launch/test_launch.py
+          # python tests/test_launch/test_launch.py
           
