--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -16,7 +16,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  cross-device-mnn-server:
+  build_job:
     # defaults:
     #   run:
     #     shell: bash
@@ -24,22 +24,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          # Window 64 bit
-          - os: ubuntu-latest
-            python: 38
-            bitness: 64
-          - os: ubuntu-latest
-            python: 39
-            bitness: 64
-          - os: ubuntu-latest
-            python: 310
-            bitness: 64
-          - os: ubuntu-latest
-            python: 311
-            bitness: 64
+        os: [ Linux ]
+        arch: [X64]
+        python-version: ['python3.8', 'python3.9', 'python3.10', 'python3.11']
 
-    runs-on: [ self-hosted, Linux ]
+    runs-on: [ self-hosted,  ${{ matrix.os }}, ${{ matrix.python-version }} ]
     timeout-minutes: 5
     steps:
       - name: Extract branch name
