--- a/.github/workflows/CI_train.yml
+++ b/.github/workflows/CI_train.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI-launch
+name: CI-train
 
 # Controls when the workflow will run
 on:
