--- a/.github/workflows/CI_launch.yml
+++ b/.github/workflows/CI_launch.yml
@@ -65,4 +65,5 @@ jobs:
         working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
+          echo "Launch example has been tested successfully!" 
           # python tests/test_launch/test_launch.py
