--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -27,6 +27,9 @@ jobs:
     
     timeout-minutes: 5
     steps:
+      - name: Checkout fedml
+        uses: actions/checkout@v3
+      
       - name: Extract branch name
         shell: bash
         run: |
