--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -30,6 +30,10 @@ jobs:
       - name: Checkout fedml
         uses: actions/checkout@v3
       
+      - name: test
+        shell: bash
+        run: pwd
+
       - name: Extract branch name
         shell: bash
         run: |
