--- a/.github/workflows/CI_build.yml
+++ b/.github/workflows/CI_build.yml
@@ -29,54 +29,15 @@ jobs:
     steps:
       - name: Checkout fedml
         uses: actions/checkout@v3
-      
-      - name: test
-        shell: bash
-        run: pwd
 
-      - name: Extract branch name
-        shell: bash
-        run: |
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-              echo "branch=$(echo ${GITHUB_HEAD_REF})" >> $GITHUB_ENV
-            else
-              echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-          fi
-        id: extract_branch
-
-      - id: fedml_source_code_home
-        name: cd to master or dev branch and git pull
-        shell: bash
-        run: |
-          ls
-          echo ${{ steps.extract_branch.outputs.branch }}
-          if [[ ${{ steps.extract_branch.outputs.branch }} == "master" ]]; then
-            echo "running on master"
-            path=/home/fedml/FedML
-            cd $path
-            git pull
-            echo "dir=$path" >> $GITHUB_OUTPUT
-          else
-            echo "running on dev"
-            path=/home/fedml/FedML
-            cd $path
-            git pull
-            git checkout ${{ steps.extract_branch.outputs.branch }}
-            echo "dir=$path" >> $GITHUB_OUTPUT
-          fi
       - name: pip_install
-        working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
-          homepath=${{ format('{0}', steps.fedml_source_code_home.outputs.dir) }}
-          echo $Homepath
-          cd $homepath
           cd python
           pip install -e ./
 
       - name: pylint
-        working-directory: ${{ steps.fedml_source_code_home.outputs.dir }}
         run: |
           cd python
-          echo "Pylint has been run successfully!
+          echo "Pylint has been run successfully!"
           # pip install mnn==1.1.6
 
