--- a/.github/workflows/CI_launch.yml
+++ b/.github/workflows/CI_launch.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         arch: [X64]
-        python-version: ['3.8','3.9','3.10','3.11']
+        python-version: ['python3.8','python3.9','python3.10','python3.11']
 
     runs-on: ${{ matrix.python-version }}
     timeout-minutes: 5
